<resources>
    <string name="app_name">AppHealth</string>
    <string name="facebook_app_id">438423653268384</string>
    <string name="login_btn_sign_in">SIGN IN</string>
    <string name="login_btn_sign_up">SIGN UP</string>

    <!--title -->
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_contact_activity">Contact Support</string>
    <string name="title_marker_contact">HUFI</string>
    <string name="title_about_activity">About</string>
    <string name="title_medical_profile_activity">Medical Profile</string>
    <string name="title_medical_knowledge">Medical Knowledge</string>
    <string name="title_setting_activity">Setting Activity</string>
    <string name="title_list_clinics">List Clinics</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_history_activity">History</string>
    <string name="title_history_detail_activity">History Detail</string>
    <string name="title_result_activity">Result</string>

    <string name="medical_profile">Medical Profile</string>
    <string name="list_clinics">List Clinics</string>
    <string name="medical_knowledge">Medical Knowledge</string>
    <string name="history">History</string>
    <string name="login_lb_or">OR</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_your_name">Your Name</string>
    <string name="forgot_my_password">Forgot my password?</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="confirm_logout">Are you sure want to logout?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <!-- About screen-->
    <string name="about_lb_build_version">Build version</string>
    <string name="about_lb_version">Version: </string>
    <!--Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_file">Medical Profile </string>
    <string name="menu_clinic">List Clinics</string>
    <string name="menu_medical_knowledge">Medical Knowledge</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="menu_support">Support</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_function">Function</string>
    <string name="menu_system">System</string>
    <string name="please_wait">Loading data. Please wait…</string>

    <!--Setting Activity -->
    <string name="settings_btn_save">Save</string>
    <string name="hint_name">Full name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="person">Person</string>
    <string name="hint_address">Address: </string>
    <string name="hint_weight">Weight(kg): </string>
    <string name="hint_height">Height(cm): </string>
    <string name="hint_bmi">BMI: </string>
    <string name="hint_age">Age: </string>
</resources>
