<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/menu_function">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_file"
                    android:icon="@drawable/ic_file"
                    android:title="@string/menu_file" />
                <item
                    android:id="@+id/nav_list_clinic"
                    android:icon="@drawable/ic_ambulance"
                    android:title="@string/menu_clinic" />
                <item
                    android:id="@+id/nav_medical_knowledge"
                    android:icon="@drawable/ic_book"
                    android:title="@string/menu_medical_knowledge" />
                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/menu_history" />
                <item android:visible="false"
                    android:id="@+id/nav_heartReat"
                    android:title="Đo nhịp tim"/>
            </menu>
        </item>

    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/menu_system">
            <menu>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_email"
                    android:title="@string/menu_contact" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/menu_about" />
                <item
                    android:visible="false"
                    android:id="@+id/nav_support"
                    android:icon="@drawable/ic_phone"
                    android:title="@string/menu_support" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/menu_settings"
                    android:visible="true" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/menu_sign_out" />
</menu>
