<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/layout_medical_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="@dimen/label_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_medical_profile" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/medical_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_list_clinics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_list_clinics" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/label_margin"
                    android:gravity="center"
                    android:text="@string/list_clinics"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/layout_medical_knowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="@dimen/label_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_medical_knowledge" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/label_margin"
                    android:gravity="center"
                    android:text="@string/medical_knowledge"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/label_margin"
                android:layout_weight="1"
                android:background="@drawable/bg_home"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_history" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/label_margin"
                    android:gravity="center"
                    android:text="@string/history"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>