<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.truong.apphealth.Activities.ResultActivity">

    <LinearLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardviewTile"
            android:layout_marginLeft="@dimen/label_margin"
            android:layout_marginRight="@dimen/label_margin"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardviewTile"
                android:layout_marginTop="@dimen/label_margin"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/text_weight"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="true"
                                android:hint="@string/hint_weight"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/label_margin"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/text_height"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="true"
                                android:hint="@string/hint_height"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_marginLeft="@dimen/label_margin"
                        android:layout_marginRight="@dimen/label_margin"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/text_BMI"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:enabled="false"
                                android:hint="@string/hint_bmi"
                                android:inputType="number" />
                        </android.support.design.widget.TextInputLayout>

                        <TextView
                            android:id="@+id/text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:text="@string/hint_bmi"
                            android:textColor="@color/text_body"
                            android:textSize="@dimen/text_18sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/text_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/hint_age"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:textSize="@dimen/text_18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/label_margin"
            android:id="@+id/text_health_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_habit"
            android:text="danh sách các thói quen xấu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_train"
            android:text="danh sách các thói quen cần tập luyện"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_clinics"
            android:text="danh sách phòng khám"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
